--- a/index.html
+++ b/index.html
@@ -5,150 +5,181 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles/style.css" />
     <title>Научиться учиться</title>
-    <link rel="stylesheet" href="./styles/normalize.css">
-    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./styles/normalize.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
   </head>
   <body>
     <div class="page">
       <header class="header">
-        <img class="logo logo_place_header" src="./images/logo_place_header.svg" alt="Логотип Яндекс Практикума">
+        <img
+          class="logo logo_place_header"
+          src="./images/logo_place_header.svg"
+          alt="Логотип Яндекс Практикума"
+        />
         <h1 class="header__title">Научится учиться</h1>
-        <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете
-          использовать в своей жизни? <a class="header__link" href="#">Узнать →</a></p>
-        <img src="./images/header-image.png" alt="Картина: опять двойка" class="header__main-illustration">
+        <p class="header__subtitle">
+          Какие современные и эффективные подходы к обучению вы можете
+          использовать в своей жизни?
+          <a class="header__link" href="#">Узнать →</a>
+        </p>
+        <img
+          src="./images/header-image.png"
+          alt="Картина: опять двойка"
+          class="header__main-illustration"
+        />
         <div class="header__square-pic"></div>
       </header>
       <main class="content">
         <section class="description">
-        <div class="two-columns">
-          <h3 class="two-columns__brief">Главные проблемы в обучении</h3>
-          <div class="two_columns__main-text">
-            <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как
-              правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест,
-              но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
-            <p class="two-columns__paragraph"><span class="two-columns__span-accent">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат.
-              Что с этим делать?</p>
-            <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Э
-              ти же техники применяются на примере обучения в Практикуме.</p>
+          <div class="two-columns">
+            <h3 class="two-columns__brief">Главные проблемы в обучении</h3>
+            <div class="two_columns__main-text">
+              <p class="two-columns__paragraph">
+                Ни в школе, ни в институте нас не учат тому, как правильно
+                изучать материал. Мы готовимся к экзаменам и учим билеты. Мы
+                тренируемся решать однообразные задачи, чтобы лучше сдать тест,
+                но часто в итоге это не дает нам реального знания. Зубрежка
+                быстро выветривается и не приносит пользы.
+              </p>
+              <p class="two-columns__paragraph">
+                <span class="two-columns__span-accent">Вывод:</span> учиться
+                тоже нужно уметь, но почему-то этому мало где учат. Что с этим
+                делать?
+              </p>
+              <p class="two-columns__paragraph">
+                Конкретные техники и упражнения помогают изменить подход к
+                обучению, сделать его эффективным и захватывающим. Э ти же
+                техники применяются на примере обучения в Практикуме.
+              </p>
+            </div>
           </div>
-        </div>
-      </section>
-
+        </section>
         <section class="digits">
-        <h2 class="section-title">Цифры и факты </h2>
-        <p class="section-subtitle">Про учёбу и мозг</p>
-        <ul class="table">
-          <li class="table__cell">
-            <h3 class="table__heading">86 миллиардов</h3>
-            <p class="table__text">Число нейронов в мозге человека</p>
-          </li>
-          <li class="table__cell">
-            <h3 class="table__heading">2.1 миллиарда</h3>
-            <p class="table__text">Число нуждающихся в повышении квалификации</p>
-            <p class="table__text">Всемирный Банк, 2017</p>
-
-          </li>
-          <li class="table__cell">
-            <h3 class="table__heading">1000 терабайт</h3>
-            <p class="table__text">Объём памяти человека</p>
-          </li>
-          <li class="table__cell">
-            <h3 class="table__heading">500 триллионов</h3>
-            <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
-          </li>
-          <li class="table__cell">
-            <h3 class="table__heading">420 миллионов</h3>
-            <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства
+          <h2 class="section-title">Цифры и факты</h2>
+          <p class="section-subtitle">Про учёбу и мозг</p>
+          <ul class="table">
+            <li class="table__cell">
+              <h3 class="table__heading">86 миллиардов</h3>
+              <p class="table__text">Число нейронов в мозге человека</p>
+            </li>
+            <li class="table__cell">
+              <h3 class="table__heading">2.1 миллиарда</h3>
+              <p class="table__text">
+                Число нуждающихся в повышении квалификации
               </p>
               <p class="table__text">Всемирный Банк, 2017</p>
-          </li>
-          <li class="table__cell">
-            <h3 class="table__heading">17–20 лет</h3>
-            <p class="table__text">Пик обучаемости</p>
-          </li>
-          <li class="table__cell">
-            <h3 class="table__heading">1885 год</h3>
-            <p class="table__text">Открытие кривой забывания</p>
-          </li>
-          <li class="table__cell">
-            <h3 class="table__heading">1889 год</h3>
-            <p class="table__text">Открытие условного рефлекса</p>
-          </li>
-
-
-        </ul>
-
-       </section>
+            </li>
+            <li class="table__cell">
+              <h3 class="table__heading">1000 терабайт</h3>
+              <p class="table__text">Объём памяти человека</p>
+            </li>
+            <li class="table__cell">
+              <h3 class="table__heading">500 триллионов</h3>
+              <p class="table__text">
+                Число ответственных за обучение нервных синапсов у взрослого
+                человека
+              </p>
+            </li>
+            <li class="table__cell">
+              <h3 class="table__heading">420 миллионов</h3>
+              <p class="table__text">
+                Число взрослых людей моложе 25 лет, не имеющих образования для
+                трудоустройства
+              </p>
+              <p class="table__text">Всемирный Банк, 2017</p>
+            </li>
+            <li class="table__cell">
+              <h3 class="table__heading">17–20 лет</h3>
+              <p class="table__text">Пик обучаемости</p>
+            </li>
+            <li class="table__cell">
+              <h3 class="table__heading">1885 год</h3>
+              <p class="table__text">Открытие кривой забывания</p>
+            </li>
+            <li class="table__cell">
+              <h3 class="table__heading">1889 год</h3>
+              <p class="table__text">Открытие условного рефлекса</p>
+            </li>
+          </ul>
+        </section>
         <section class="feynman">
-        <h2 class="feynman__title">Метод Феймана</h2>
-        <p class="feynman__subtitle">Выучить и не забыть.</p>
-        <a class="feynman__link" href="#">Подробнее →</a>
-        <img class="feynman__illustration" src="./images/feynman.png" alt="Портрет Феймана">
-      </section>
+          <h2 class="feynman__title">Метод Феймана</h2>
+          <p class="feynman__subtitle">Выучить и не забыть.</p>
+          <a class="feynman__link" href="#">Подробнее →</a>
+          <img
+            class="feynman__illustration"
+            src="./images/feynman.png"
+            alt="Портрет Феймана"
+          />
+        </section>
         <section class="kaufman">
-        <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
-        <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
+          <h2 class="section-title section-title_theme_dark">
+            Принципы обучения
+          </h2>
+          <p class="section-subtitle section-subtitle_theme_dark">
+            от Джоша Кауфмана
+          </p>
           <ul class="table">
             <li class="table__cell_theme_dark">
               <h3 class="table__heading">1</h3>
               <p class="table__text">Выберите привлекательный проект.</p>
             </li>
-            <li class="table__cell_theme_dark
-">
+            <li class="table__cell_theme_dark">
               <h3 class="table__heading">2</h3>
-              <p class="table__text">Сосредоточьтесь на каком-то одном навыке.</p>
+              <p class="table__text">
+                Сосредоточьтесь на каком-то одном навыке.
+              </p>
             </li>
-            <li class="table__cell_theme_dark
-">
+            <li class="table__cell_theme_dark">
               <h3 class="table__heading">3</h3>
               <p class="table__text">Определите целевой уровень мастерства.</p>
             </li>
-            <li class="table__cell_theme_dark
-">
+            <li class="table__cell_theme_dark">
               <h3 class="table__heading">4</h3>
               <p class="table__text">Разбейте навык на элементы.</p>
             </li>
-            <li class="table__cell_theme_dark
-">
+            <li class="table__cell_theme_dark">
               <h3 class="table__heading">5</h3>
-              <p class="table__text">Приготовьте всё необходимое для занятий.</p>
+              <p class="table__text">
+                Приготовьте всё необходимое для занятий.
+              </p>
             </li>
-            <li class="table__cell_theme_dark
-">
+            <li class="table__cell_theme_dark">
               <h3 class="table__heading">6</h3>
               <p class="table__text">Устраните препятствия для занятий.</p>
             </li>
-            <li class="table__cell_theme_dark
-">
+            <li class="table__cell_theme_dark">
               <h3 class="table__heading">7</h3>
               <p class="table__text">Выделите специальное время для занятий.</p>
             </li>
-            <li class="table__cell_theme_dark
-">
+            <li class="table__cell_theme_dark">
               <h3 class="table__heading">8</h3>
               <p class="table__text">Создайте быстрые петли обратной связи.</p>
             </li>
-            <li class="table__cell_theme_dark
-">
+            <li class="table__cell_theme_dark">
               <h3 class="table__heading">9</h3>
-              <p class="table__text">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+              <p class="table__text">
+                Занимайтесь по расписанию, короткими интенсивными интервалами.
+              </p>
             </li>
-            <li class="table__cell_theme_dark
-">
+            <li class="table__cell_theme_dark">
               <h3 class="table__heading">10</h3>
-              <p class="table__text">Уделяйте внимание количеству и скорости.</p>
+              <p class="table__text">
+                Уделяйте внимание количеству и скорости.
+              </p>
             </li>
-
           </ul>
           <div class="kaufman__triangle"></div>
         </section>
       </main>
-
-
       <footer class="footer">
         <div class="footer__columns">
           <div class="footer__column_content_copyright">
-            <img class="logo logo__footer" src="./images/logo_place_footer.svg" alt="Логотип Яндекс Практикума">
+            <img
+              class="logo logo__footer"
+              src="./images/logo_place_footer.svg"
+              alt="Логотип Яндекс Практикума"
+            />
             <p class="footer__autor">&copy; 2022. Кабардина Марьяна</p>
           </div>
           <div class="footer__column_content_info">
@@ -165,12 +196,33 @@
             <p class="footer__column-heading">Соцсети</p>
             <nav>
               <ul class="footer__column-links">
-                <li><a class="footer__column-link" href="#"><img class="footer__social_icon" src="./images/facebook_color_white.svg"
-                  alt="Логотип Facebook">Facebook</a></li>
-                <li><a class="footer__column-link" href="#"><img class="footer__social_icon" src="./images/vk_color_white.svg"
-                  alt="Логотип ВКонтакте">ВКонтакте</a></li>
-                <li><a class="footer__column-link" href="#"><img class="footer__social_icon" src="./images/instagram_color_white.svg"
-                  alt="Логотип Instagram">Instagram</a></li>
+                <li>
+                  <a class="footer__column-link" href="#"
+                    ><img
+                      class="footer__social_icon"
+                      src="./images/facebook_color_white.svg"
+                      alt="Логотип Facebook"
+                    />Facebook</a
+                  >
+                </li>
+                <li>
+                  <a class="footer__column-link" href="#"
+                    ><img
+                      class="footer__social_icon"
+                      src="./images/vk_color_white.svg"
+                      alt="Логотип ВКонтакте"
+                    />ВКонтакте</a
+                  >
+                </li>
+                <li>
+                  <a class="footer__column-link" href="#"
+                    ><img
+                      class="footer__social_icon"
+                      src="./images/instagram_color_white.svg"
+                      alt="Логотип Instagram"
+                    />Instagram</a
+                  >
+                </li>
               </ul>
             </nav>
           </div>
