--- a/index.html
+++ b/index.html
@@ -120,49 +120,49 @@
             от Джоша Кауфмана
           </p>
           <ul class="table">
-            <li class="table__cell_theme_dark">
+            <li class="table__cell table__cell_theme_dark">
               <h3 class="table__heading">1</h3>
               <p class="table__text">Выберите привлекательный проект.</p>
             </li>
-            <li class="table__cell_theme_dark">
+            <li class="table__cell table__cell_theme_dark">
               <h3 class="table__heading">2</h3>
               <p class="table__text">
                 Сосредоточьтесь на каком-то одном навыке.
               </p>
             </li>
-            <li class="table__cell_theme_dark">
+            <li class="table__cell table__cell_theme_dark">
               <h3 class="table__heading">3</h3>
               <p class="table__text">Определите целевой уровень мастерства.</p>
             </li>
-            <li class="table__cell_theme_dark">
+            <li class="table__cell table__cell_theme_dark">
               <h3 class="table__heading">4</h3>
               <p class="table__text">Разбейте навык на элементы.</p>
             </li>
-            <li class="table__cell_theme_dark">
+            <li class="table__cell table__cell_theme_dark">
               <h3 class="table__heading">5</h3>
               <p class="table__text">
                 Приготовьте всё необходимое для занятий.
               </p>
             </li>
-            <li class="table__cell_theme_dark">
+            <li class="table__cell table__cell_theme_dark">
               <h3 class="table__heading">6</h3>
               <p class="table__text">Устраните препятствия для занятий.</p>
             </li>
-            <li class="table__cell_theme_dark">
+            <li class="table__cell table__cell_theme_dark">
               <h3 class="table__heading">7</h3>
               <p class="table__text">Выделите специальное время для занятий.</p>
             </li>
-            <li class="table__cell_theme_dark">
+            <li class="table__cell table__cell_theme_dark">
               <h3 class="table__heading">8</h3>
               <p class="table__text">Создайте быстрые петли обратной связи.</p>
             </li>
-            <li class="table__cell_theme_dark">
+            <li class="table__cell table__cell_theme_dark">
               <h3 class="table__heading">9</h3>
               <p class="table__text">
                 Занимайтесь по расписанию, короткими интенсивными интервалами.
               </p>
             </li>
-            <li class="table__cell_theme_dark">
+            <li class="table__cell table__cell_theme_dark">
               <h3 class="table__heading">10</h3>
               <p class="table__text">
                 Уделяйте внимание количеству и скорости.
@@ -174,16 +174,16 @@
       </main>
       <footer class="footer">
         <div class="footer__columns">
-          <div class="footer__column_content_copyright">
+          <div class="footer__column footer__column_content_copyright">
             <img
-              class="logo logo__footer"
+              class="logo logo_place_footer"
               src="./images/logo_place_footer.svg"
               alt="Логотип Яндекс Практикума"
             />
             <p class="footer__autor">&copy; 2022. Кабардина Марьяна</p>
           </div>
-          <div class="footer__column_content_info">
-            <p class="footer__column-heading">О Практикуме</p>
+          <div class="footer__column footer__column_content_info">
+            <h4 class="footer__column-heading">О Практикуме</h4>
             <nav>
               <ul class="footer__column-links">
                 <li><a class="footer__column-link" href="#">Главная</a></li>
@@ -192,8 +192,8 @@
               </ul>
             </nav>
           </div>
-          <div class="footer__column_content_social">
-            <p class="footer__column-heading">Соцсети</p>
+          <div class="footer__column footer__column_content_social">
+            <h4 class="footer__column-heading">Соцсети</h4>
             <nav>
               <ul class="footer__column-links">
                 <li>
