--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         />
         <div class="header__square-pic"></div>
       </header>
-      <main class="content">
+      <body class="content">
         <section class="description">
           <div class="two-columns">
             <h3 class="two-columns__brief">Главные проблемы в обучении</h3>
@@ -53,6 +53,72 @@
               </p>
             </div>
           </div>
+        </section>
+        <section class="techiques">
+          <h2 class="section-title">Техники обучения</h2>
+          <p class="section-subtitle">Пять практик от Барабы Оакли</p>
+          <ul class="cards">
+            <li class="cards__item">
+              <img class="cards__image" src="/images/cards-attention.png" alt="внимание">
+              <h3 class="cards__title">Два вида внимания</h3>
+              <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.
+              </p>
+            </li>
+            <li class="cards__item">
+              <img class="cards__image" src="./images/cards-recall.png" alt="статуя">
+              <h3 class="cards__title">Recall</h3>
+              <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
+            </li>
+            <li class="cards__item">
+              <img class="cards__image" src="./images/cards-interliving.png" alt="фойе">
+              <h3 class="cards__title">Интерливинг</h3>
+              <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
+            </li>
+            <li class="cards__item">
+              <img class="cards__image" src="./images/cards-question.png" alt="большое пустое помещение">
+              <h3 class="cards__title">Вопросы</h3>
+              <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
+            </li>
+            <li class="cards__item">
+              <img class="cards__image" src="./images/cards-competence.png" alt="стопка книг">
+              <h3 class="cards__title">Иллюзия компетентности</h3>
+              <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
+            </li>
+          </ul>
+        </section>
+        <section class="video">
+          <h2 class="section-title">Видео на TED</h2>
+          <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
+          <div class="video__iframes">
+            <iframe class="video__iframe" width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
+            <iframe class="video__iframe" width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY" title="YouTube video player" frameborder="0" allowfullscreen></iframe></iframe>
+          </div>
+        </section>
+        <section class="oakley">
+          <div class="two-columns">
+            <h3 class="two-columns__brief">История Барбары Оакли.</h3>
+            <div class="two_columns__main-text">
+              <p class="two-columns__paragraph">
+                С детства Барбаре не давалась математика. Она считала себя законченным
+                гуманитарием, причём далеко не самым умным. В армии она изучала русский язык,
+                чтобы получить надбавку, да так успешно, что её выдвинули в командиры.
+                Но для продвижения по службе нужно было сдавать математику.
+                И тогда Барбара придумала свой подход к точным наукам. Оказалось,
+                если вам что-то «плохо даётся», ваши добытые трудом знания гораздо глубже,
+                чем у тех, кому всё ясно с первого взгляда.
+              </p>
+            </div>
+          </div>
+        </section>
+        <section class="feynman">
+          <h2 class="feynman__title">Метод Феймана</h2>
+          <p class="feynman__subtitle">Выучить и не забыть.</p>
+          <a class="feynman__link" href="#">Подробнее →</a>
+          <img
+            class="feynman__illustration"
+            src="./images/feynman.png"
+            alt="Портрет Феймана"
+          />
         </section>
         <section class="digits">
           <h2 class="section-title">Цифры и факты</h2>
@@ -102,15 +168,25 @@
             </li>
           </ul>
         </section>
-        <section class="feynman">
-          <h2 class="feynman__title">Метод Феймана</h2>
-          <p class="feynman__subtitle">Выучить и не забыть.</p>
-          <a class="feynman__link" href="#">Подробнее →</a>
-          <img
-            class="feynman__illustration"
-            src="./images/feynman.png"
-            alt="Портрет Феймана"
-          />
+        <section class="khan">
+          <div class="khan__container">
+            <h3 class="khan__author">Салман Хан</h3>
+            <h2 class="khan__title">Весь мир - школа</h2>
+            <article class="khan__quote">Страсть и новаторство Сала Хана меняют процесс
+              обучения миллионов студентов по всему миру. Книгу «Весь мир — школа»
+              нужно прочитать всем, кто занимается образованием — так учащиеся
+              повсюду смогут получить навыки и знания, которые приносят успех в
+              школе, карьере и жизни.
+            </article>
+            <h3 class="khan__quote-author">Джорж Лукас</h3>
+            <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
+            <div class="khan__book-container">
+              <img class="khan__book-pic" src="./images/khan-book.jpg" alt="Обложка книги Салман Хан">
+              <a class="khan__buy-link" href="#">Купить книгу →</a>
+            </div>
+
+
+          </div>
         </section>
         <section class="kaufman">
           <h2 class="section-title section-title_theme_dark">
@@ -171,6 +247,22 @@
           </ul>
           <div class="kaufman__triangle"></div>
         </section>
+        <section class="resources">
+          <h2 class="section-title">
+            Полезные ресурсы
+          </h2>
+          <p class="section-subtitle">
+            Больше материалов о техниках и лайфхаках обучения
+          </p>
+          <div>
+          <ul class="resources_logo-zone">
+            <li class="resources_logo"><img src="/images/logo/resources-arzamas.svg" alt="Логотип Arzamas"></li>
+            <li class="resources_logo"><img src="/images/logo/resources-n1.svg" alt="Логотип N+1"></li>
+            <li class="resources_logo"><img src="/images/logo/resources-strelka.svg" alt="Логотип Strelka"></li>
+            <li class="resources_logo"><img src="/images/logo/resources-polka.svg" alt="Логотип Полка"></li>
+          </ul>
+          </div>
+        </section>
       </main>
       <footer class="footer">
         <div class="footer__columns">
@@ -220,8 +312,7 @@
                       class="footer__social_icon"
                       src="./images/instagram_color_white.svg"
                       alt="Логотип Instagram"
-                    />Instagram</a
-                  >
+                    />Instagram</a>
                 </li>
               </ul>
             </nav>
