--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./styles/style.css" />
     <title>Научиться учиться</title>
-    <link rel="stylesheet" href="./styles/normalize.css" />
-    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./vendor/normalize.css" />
+    <link rel="stylesheet" href="./pages/index.css" />
   </head>
   <body>
     <div class="page">
@@ -29,7 +28,7 @@
         />
         <div class="header__square-pic"></div>
       </header>
-      <body class="content">
+      <main class="content">
         <section class="description">
           <div class="two-columns">
             <h3 class="two-columns__brief">Главные проблемы в обучении</h3>
@@ -90,8 +89,8 @@
           <h2 class="section-title">Видео на TED</h2>
           <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
           <div class="video__iframes">
-            <iframe class="video__iframe" width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
-            <iframe class="video__iframe" width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY" title="YouTube video player" frameborder="0" allowfullscreen></iframe></iframe>
+            <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
+            <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
           </div>
         </section>
         <section class="oakley">
@@ -172,20 +171,18 @@
           <div class="khan__container">
             <h3 class="khan__author">Салман Хан</h3>
             <h2 class="khan__title">Весь мир - школа</h2>
-            <article class="khan__quote">Страсть и новаторство Сала Хана меняют процесс
+            <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс
               обучения миллионов студентов по всему миру. Книгу «Весь мир — школа»
               нужно прочитать всем, кто занимается образованием — так учащиеся
               повсюду смогут получить навыки и знания, которые приносят успех в
               школе, карьере и жизни.
-            </article>
+            </p>
             <h3 class="khan__quote-author">Джорж Лукас</h3>
             <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
             <div class="khan__book-container">
               <img class="khan__book-pic" src="./images/khan-book.jpg" alt="Обложка книги Салман Хан">
               <a class="khan__buy-link" href="#">Купить книгу →</a>
             </div>
-
-
           </div>
         </section>
         <section class="kaufman">
@@ -255,11 +252,11 @@
             Больше материалов о техниках и лайфхаках обучения
           </p>
           <div>
-          <ul class="resources_logo-zone">
-            <li class="resources_logo"><img src="/images/logo/resources-arzamas.svg" alt="Логотип Arzamas"></li>
-            <li class="resources_logo"><img src="/images/logo/resources-n1.svg" alt="Логотип N+1"></li>
-            <li class="resources_logo"><img src="/images/logo/resources-strelka.svg" alt="Логотип Strelka"></li>
-            <li class="resources_logo"><img src="/images/logo/resources-polka.svg" alt="Логотип Полка"></li>
+          <ul class="resources__logo-zone">
+            <li class="resources__logo"><img src="/images/logo/resources-arzamas.svg" alt="Логотип Arzamas"></li>
+            <li class="resources__logo"><img src="/images/logo/resources-n1.svg" alt="Логотип N+1"></li>
+            <li class="resources__logo"><img src="/images/logo/resources-strelka.svg" alt="Логотип Strelka"></li>
+            <li class="resources__logo"><img src="/images/logo/resources-polka.svg" alt="Логотип Полка"></li>
           </ul>
           </div>
         </section>
