--- a/index.html
+++ b/index.html
@@ -58,30 +58,64 @@
           <p class="section-subtitle">Пять практик от Барабы Оакли</p>
           <ul class="cards">
             <li class="cards__item">
-              <img class="cards__image" src="/images/cards-attention.png" alt="внимание">
+              <img
+                class="cards__image"
+                src="/images/cards-attention.png"
+                alt="внимание"
+              />
               <h3 class="cards__title">Два вида внимания</h3>
-              <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.
+              <p class="cards__description">
+                Глубокие знания возникают, если чередовать сфокусированное и
+                рассеянное мышление.
               </p>
             </li>
             <li class="cards__item">
-              <img class="cards__image" src="./images/cards-recall.png" alt="статуя">
+              <img
+                class="cards__image"
+                src="./images/cards-recall.png"
+                alt="статуя"
+              />
               <h3 class="cards__title">Recall</h3>
-              <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
+              <p class="cards__description">
+                Вспоминайте изученное — это позволит соединить разрозненные
+                порции памяти.
+              </p>
             </li>
             <li class="cards__item">
-              <img class="cards__image" src="./images/cards-interliving.png" alt="фойе">
+              <img
+                class="cards__image"
+                src="./images/cards-interliving.png"
+                alt="фойе"
+              />
               <h3 class="cards__title">Интерливинг</h3>
-              <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
+              <p class="cards__description">
+                Изучайте несколько навыков одновременно, они обогащают друг
+                друга.
+              </p>
             </li>
             <li class="cards__item">
-              <img class="cards__image" src="./images/cards-question.png" alt="большое пустое помещение">
+              <img
+                class="cards__image"
+                src="./images/cards-question.png"
+                alt="большое пустое помещение"
+              />
               <h3 class="cards__title">Вопросы</h3>
-              <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
+              <p class="cards__description">
+                Слушая преподавателя, придумывайте хороший вопрос, который вас
+                действительно волнует.
+              </p>
             </li>
             <li class="cards__item">
-              <img class="cards__image" src="./images/cards-competence.png" alt="стопка книг">
+              <img
+                class="cards__image"
+                src="./images/cards-competence.png"
+                alt="стопка книг"
+              />
               <h3 class="cards__title">Иллюзия компетентности</h3>
-              <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
+              <p class="cards__description">
+                Повторите про себя, запишите, расскажите другу: вам только
+                кажется, что вы владеете новой темой.
+              </p>
             </li>
           </ul>
         </section>
@@ -89,8 +123,20 @@
           <h2 class="section-title">Видео на TED</h2>
           <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
           <div class="video__iframes">
-            <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
-            <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
+            <iframe
+              class="video__iframe"
+              src="https://www.youtube.com/embed/arj7oStGLkU"
+              title="YouTube video player"
+
+              allowfullscreen
+            ></iframe>
+            <iframe
+              class="video__iframe"
+              src="https://www.youtube.com/embed/5MgBikgcWnY"
+              title="YouTube video player"
+
+              allowfullscreen
+            ></iframe>
           </div>
         </section>
         <section class="oakley">
@@ -98,13 +144,14 @@
             <h3 class="two-columns__brief">История Барбары Оакли.</h3>
             <div class="two_columns__main-text">
               <p class="two-columns__paragraph">
-                С детства Барбаре не давалась математика. Она считала себя законченным
-                гуманитарием, причём далеко не самым умным. В армии она изучала русский язык,
-                чтобы получить надбавку, да так успешно, что её выдвинули в командиры.
-                Но для продвижения по службе нужно было сдавать математику.
-                И тогда Барбара придумала свой подход к точным наукам. Оказалось,
-                если вам что-то «плохо даётся», ваши добытые трудом знания гораздо глубже,
-                чем у тех, кому всё ясно с первого взгляда.
+                С детства Барбаре не давалась математика. Она считала себя
+                законченным гуманитарием, причём далеко не самым умным. В армии
+                она изучала русский язык, чтобы получить надбавку, да так
+                успешно, что её выдвинули в командиры. Но для продвижения по
+                службе нужно было сдавать математику. И тогда Барбара придумала
+                свой подход к точным наукам. Оказалось, если вам что-то «плохо
+                даётся», ваши добытые трудом знания гораздо глубже, чем у тех,
+                кому всё ясно с первого взгляда.
               </p>
             </div>
           </div>
@@ -171,16 +218,21 @@
           <div class="khan__container">
             <h3 class="khan__author">Салман Хан</h3>
             <h2 class="khan__title">Весь мир - школа</h2>
-            <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс
-              обучения миллионов студентов по всему миру. Книгу «Весь мир — школа»
-              нужно прочитать всем, кто занимается образованием — так учащиеся
-              повсюду смогут получить навыки и знания, которые приносят успех в
-              школе, карьере и жизни.
+            <p class="khan__quote">
+              Страсть и новаторство Сала Хана меняют процесс обучения миллионов
+              студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать
+              всем, кто занимается образованием — так учащиеся повсюду смогут
+              получить навыки и знания, которые приносят успех в школе, карьере
+              и жизни.
             </p>
             <h3 class="khan__quote-author">Джорж Лукас</h3>
             <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
             <div class="khan__book-container">
-              <img class="khan__book-pic" src="./images/khan-book.jpg" alt="Обложка книги Салман Хан">
+              <img
+                class="khan__book-pic"
+                src="./images/khan-book.jpg"
+                alt="Обложка книги Салман Хан"
+              />
               <a class="khan__buy-link" href="#">Купить книгу →</a>
             </div>
           </div>
@@ -245,19 +297,34 @@
           <div class="kaufman__triangle"></div>
         </section>
         <section class="resources">
-          <h2 class="section-title">
-            Полезные ресурсы
-          </h2>
+          <h2 class="section-title">Полезные ресурсы</h2>
           <p class="section-subtitle">
             Больше материалов о техниках и лайфхаках обучения
           </p>
           <div>
-          <ul class="resources__logo-zone">
-            <li class="resources__logo"><img src="/images/logo/resources-arzamas.svg" alt="Логотип Arzamas"></li>
-            <li class="resources__logo"><img src="/images/logo/resources-n1.svg" alt="Логотип N+1"></li>
-            <li class="resources__logo"><img src="/images/logo/resources-strelka.svg" alt="Логотип Strelka"></li>
-            <li class="resources__logo"><img src="/images/logo/resources-polka.svg" alt="Логотип Полка"></li>
-          </ul>
+            <ul class="resources__logo-zone">
+              <li class="resources__logo">
+                <img
+                  src="/images/logo/resources-arzamas.svg"
+                  alt="Логотип Arzamas"
+                />
+              </li>
+              <li class="resources__logo">
+                <img src="/images/logo/resources-n1.svg" alt="Логотип N+1" />
+              </li>
+              <li class="resources__logo">
+                <img
+                  src="/images/logo/resources-strelka.svg"
+                  alt="Логотип Strelka"
+                />
+              </li>
+              <li class="resources__logo">
+                <img
+                  src="/images/logo/resources-polka.svg"
+                  alt="Логотип Полка"
+                />
+              </li>
+            </ul>
           </div>
         </section>
       </main>
@@ -309,7 +376,8 @@
                       class="footer__social_icon"
                       src="./images/instagram_color_white.svg"
                       alt="Логотип Instagram"
-                    />Instagram</a>
+                    />Instagram</a
+                  >
                 </li>
               </ul>
             </nav>
