Второй проект (1 ревью, вид согласно брифу

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Научиться учиться</title>
-    <link rel="stylesheet" href="./vendor/normalize.css" />
     <link rel="stylesheet" href="./pages/index.css" />
   </head>
   <body>
@@ -26,7 +25,7 @@
           alt="Картина: опять двойка"
           class="header__main-illustration"
         />
-        <div class="header__square-pic"></div>
+        <div class="rotation header__square-pic"></div>
       </header>
       <main class="content">
         <section class="description">
@@ -60,7 +59,7 @@
             <li class="cards__item">
               <img
                 class="cards__image"
-                src="/images/cards-attention.png"
+                src="./images/cards-attention.png"
                 alt="внимание"
               />
               <h3 class="cards__title">Два вида внимания</h3>
@@ -125,16 +124,17 @@
           <div class="video__iframes">
             <iframe
               class="video__iframe"
-              src="https://www.youtube.com/embed/arj7oStGLkU"
+              src="https://www.youtube.com/embed/5MgBikgcWnY"
               title="YouTube video player"
               allowfullscreen
             ></iframe>
             <iframe
               class="video__iframe"
-              src="https://www.youtube.com/embed/5MgBikgcWnY"
+              src="https://www.youtube.com/embed/arj7oStGLkU"
               title="YouTube video player"
               allowfullscreen
             ></iframe>
+
           </div>
         </section>
         <section class="oakley">
@@ -292,7 +292,7 @@
               </p>
             </li>
           </ul>
-          <div class="kaufman__triangle"></div>
+          <div class="rotation kaufman__triangle"></div>
         </section>
         <section class="resources">
           <h2 class="section-title">Полезные ресурсы</h2>
@@ -303,22 +303,22 @@
             <ul class="resources__logo-zone">
               <li class="resources__logo">
                 <img
-                  src="/images/logo/resources-arzamas.svg"
+                  src="./images/logo/resources-arzamas.svg"
                   alt="Логотип Arzamas"
                 />
               </li>
               <li class="resources__logo">
-                <img src="/images/logo/resources-n1.svg" alt="Логотип N+1" />
+                <img src="./images/logo/resources-n1.svg" alt="Логотип N+1" />
               </li>
               <li class="resources__logo">
                 <img
-                  src="/images/logo/resources-strelka.svg"
+                  src="./images/logo/resources-strelka.svg"
                   alt="Логотип Strelka"
                 />
               </li>
               <li class="resources__logo">
                 <img
-                  src="/images/logo/resources-polka.svg"
+                  src="./images/logo/resources-polka.svg"
                   alt="Логотип Полка"
                 />
               </li>
